name:          athena
version:       0.2
build-type:    Simple
cabal-version: >= 1.18
author:        Jonathan Prieto-Cubides with contributions by Andrés Sicard-Ramírez
license:       MIT
license-file:  LICENSE
maintainer:    Jonathan Prieto-Cubides <jprieto9@eafit.edu.co>
category:      Language
homepage:      https://github.com/jonaprieto/athena
bug-reports:   https://github.com/jonaprieto/athena/issues/
synopsis:      TSTP to Agda
tested-with:   GHC == 8.4.3 , GHC == 8.6.5
description:
  Athena is a tool that translates Metis ATP proofs to the Agda
  programming language to check their correctness.

extra-source-files:
  README.md

source-repository head
  type:     git
  location: git://github.com/jonaprieto/athena.git

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:  array >= 0.4 && < 1.0
                , base >= 4.9.0.0 && < 4.15
                , base-compat >= 0.9 && < 0.11
                , bytestring >= 0.10.0.2 && < 0.11
                , containers >= 0.5.0.0 && < 0.6
                , filepath >= 1.4 && < 1.5
                , mtl >= 2.2.1 && < 2.3
                , process >= 1.4.3.0 && < 1.7
                , split >= 0.2.3.1 && < 0.3
                , text >= 0.11.0.0 && < 1.3

  exposed-modules:
    Athena.Translation.Utils
    Athena.Utils.PrettyPrint
    Data.Proof
    Data.Proof.ProofTreeGen
    Data.TSTP
    Data.TSTP.AtomicWord
    Data.TSTP.BinOp
    Data.TSTP.F
    Data.TSTP.Formula
    Data.TSTP.GData
    Data.TSTP.InfixPred
    Data.TSTP.IntroType
    Data.TSTP.Parent
    Data.TSTP.Quant
    Data.TSTP.Role
    Data.TSTP.Rule
    Data.TSTP.Source
    Data.TSTP.Status
    Data.TSTP.Term
    Data.TSTP.Theory
    Data.TSTP.V

executable athena
  default-language: Haskell2010

  main-is:          Athena/Main.hs
  hs-source-dirs:   src
  include-dirs:     src/Athena

  build-depends:  array >= 0.4 && < 1.0
                , base >= 4.6.0.1 && < 4.15
                , base-compat >= 0.9 && < 0.11
                , bytestring >= 0.10.0.2 && < 0.11
                , containers >= 0.5.0.0 && < 0.7
                , filepath >= 1.4 && < 1.5
                , mtl >= 2.2.1 && < 2.3
                , process >= 1.1.0.2 && < 1.7
                , split >= 0.2.3.1 && < 0.3
                , text >= 0.11.0.0 && < 1.3

  build-tools: cpphs >= 1.20.8

  other-modules:
    Athena.Options
    Athena.Translation.AgdaFile
    Athena.Translation.Core
    Athena.Translation.Rules
    Athena.Translation.Rules.Strip
    Athena.Translation.Utils
    Athena.TSTP
    Athena.TSTP.Base
    Athena.TSTP.Lexer
    Athena.TSTP.Parser
    Athena.Utils.CommitVersion
    Athena.Utils.Monad
    Athena.Utils.PrettyPrint
    Athena.Utils.Show
    Athena.Utils.Version
    Data.Proof
    Data.Proof.ProofTreeGen
    Data.TSTP
    Data.TSTP.AtomicWord
    Data.TSTP.BinOp
    Data.TSTP.F
    Data.TSTP.Formula
    Data.TSTP.GData
    Data.TSTP.InfixPred
    Data.TSTP.IntroType
    Data.TSTP.Parent
    Data.TSTP.Quant
    Data.TSTP.Role
    Data.TSTP.Rule
    Data.TSTP.Source
    Data.TSTP.Status
    Data.TSTP.Term
    Data.TSTP.Theory
    Data.TSTP.V
    Paths_athena
